// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <ProductImage /> Debe de mostrar correctamente el componente 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="http://imgdeprueba.jpg"
/>
`;

exports[`Pruebas en <ProductImage /> Debe de mostrar correctamente el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
